# weather-analysis

./: CMakeLists.txt  README.md  scripts.sh
buld/: CMakeCache.txt  Makefile  cmake_install.cmake  sample2_viewer  test_exporter  test_output.csv  test_output.txt  test_weather  weather_analysis
data/: sample.csv  sample1.csv
include/: CMakeCache.txt  GraphASCII.h  GraphImPlot.h  MainWindow.h  Makefile  WeatherAPIClient.h  WeatherExporter.h  WeatherRecord.h  WeatherTrendDetection.h  cmake_install.cmake  test_weather_api  weather_analysis
src/: GraphASCII.cpp  MainWindow.cpp  WeatherAPIClient.cpp  WeatherExporter.cpp  WeatherRecord.cpp  WeatherTrendDetection.cpp  main.cpp  main_cli.cpp
tests/: sample2_viewer.cpp  test_exporter.cpp  test_trend_detection.cpp  test_weather.cpp  test_weather_api.cpp
